# loro_ex

./: .gitignore  CHANGELOG.md  LICENSE  README.md  checksum-Elixir.LoroEx.Native.exs  mix.exs  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
docs/: design.md
docs/guides/: getting_started.md  presence_and_cursors.md  rich_text.md  sync_and_persistence.md  time_travel.md  tree_and_blocks.md  undo.md
lib/: loro_ex.ex
lib/loro_ex/: native.ex
native/loro_nif/: Cargo.toml
native/loro_nif/src/: lib.rs
test/: loro_ex_test.exs  property_test.exs  test_helper.exs
test/support/: generators.ex
